--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.5.2",
     "cross-env": "^7.0.2",
     "jquery": "^3.5.1",
+    "jquery-ui": "^1.12.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
