--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cross-env": "^7.0.2",
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
+    "json-server": "^0.16.3",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
