--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-scripts": "^4.0.1"
   },
   "scripts": {
-    "start": "cross-env BROWSER=chrome react-scripts start",
+    "start": "cross-env BROWSER=chrome PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
