--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.1"
+    "react-scripts": "^4.0.1",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "cross-env BROWSER=chrome PORT=3001 react-scripts start",
