--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "cross-env BROWSER=chrome PORT=3001 react-scripts start",
