--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "cross-env": "^7.0.2",
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
-    "json-server": "^0.16.3",
     "node-sass": "^4.14.1",
+    "query-string": "^7.0.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
