--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-react-app": "^3.1.2",
     "bootstrap": "^4.5.2",
     "cross-env": "^7.0.2",
+    "history": "^5.0.1",
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
     "node-sass": "^4.14.1",
