--- a/package.json
+++ b/package.json
@@ -9,28 +9,29 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.2",
     "bootstrap": "^4.5.2",
     "cross-env": "^7.0.2",
     "history": "^5.0.1",
     "jquery": "^3.5.1",
-    "jquery-ui": "^1.12.1",
-    "node-sass": "^4.14.1",
+    "jquery-ui": "^1.13.0",
+    "node-sass": "^7.0.1",
     "query-string": "^7.0.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.1",
+    "react-scripts": "^5.0.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.3"
   },
   "scripts": {
     "start": "cross-env BROWSER=chrome PORT=3001 react-scripts start",
